examples/invalid/59_field_offer_not_allowed.lane
// invalid: struct fields cannot be contextual offers
module Examples.Invalid59

struct Box {
  offer value : Int
}

